--- a/proj/proj/static/css/style.css
+++ b/proj/proj/static/css/style.css
@@ -1,11 +1,37 @@
-html, body {
+body, html {
+    height: 100%;
+    margin: 0;
+    overflow: hidden;
+}
+body {
+    display: flex;
+    flex-direction: column;
+    transition: background-color 0.5s, color 0.5s;
+} 
+#background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background: black;
+}
+canvas {
+    display: block;
+}
+
+
+
+
+/* html, body {
     height: 100%;
 }
 body {
     display: flex;
     flex-direction: column;
     transition: background-color 0.5s, color 0.5s;
-}
+} */
 #content {
     flex: 1;
 }
