--- a/proj/proj/templates/base.html
+++ b/proj/proj/templates/base.html
@@ -48,7 +48,7 @@
             </div>
         </div>
     </nav>
-    <div id="content" class="container">
+    <div id="content" class="container" style="overflow-y: auto; height: calc(100vh - 150px);">
         <div class="card">
             <div class="card-body">
                {% block content %}
