--- a/proj/proj/static/css/style.css
+++ b/proj/proj/static/css/style.css
@@ -120,3 +120,44 @@ footer {
     color: #ffffff;
     border: 1px solid #5b8cbf;
 }
+
+
+
+
+
+/* Стили кабинета ----------------------------------------------*/
+
+.logout-button {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    background-color: #ff4c4c;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    position: relative;
+}
+
+.logout-button:hover {
+    background-color: #ff1a1a;
+    animation: pulse 0.5s infinite;
+    color: white;
+}
+
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.1);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
